# AutoModemAdmin

./: .gitignore  main.py  pyproject.toml
automodemadmin/: main.py  modems.py  nononesdefaultdict.py
tests/: test_auto_modem_admin.py
